html foundation, will be reworked after the backend

--- a/Views/Collection/Collection.cshtml
+++ b/Views/Collection/Collection.cshtml
@@ -17,21 +17,21 @@
   overflow:hidden;padding:10px 5px;word-break:normal;}
 .tg th{border-bottom: 5px solid red; font-family:Arial, sans-serif;font-size:14px;
   font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
-.tg .tg-im3k{border-color:#ffc702;text-align:left;vertical-align:top}
+.tg .tg-im3k{border-color:#ffc702;text-align:center;vertical-align:top}
 .tg .tg-n57l{background-color:#f56b00;border-color:#f8a102;color:#330001;position:-webkit-sticky;position:sticky;text-align:left;
   top:-1px;vertical-align:top;will-change:transform}
 </style>
 <table class="tg">
 <thead>
   <tr>
-    <th class="tg-n57l">Image</th>
+    <th class="tg-n57l">    Image   </th>
     <th class="tg-n57l">Name</th>
-    <th class="tg-n57l">Mana cost</th>
-    <th class="tg-n57l">Price</th>
-    <th class="tg-n57l">Market Stock</th>
+    <th class="tg-n57l">Amount in collection</th>
     <th class="tg-n57l">...</th>
     <th class="tg-n57l">...</th>
     <th class="tg-n57l">...</th>
+    <th class="tg-n57l">...</th>
+    <th class="tg-n57l">Info</th>
   </tr>
 </thead>
 <tbody>
@@ -55,7 +55,7 @@
                         <td class="tg-im3k">y</td>
                         <td class="tg-im3k">z</td>
                         <td class="tg-im3k">x</td>
-                        <td class="tg-im3k">y</td>
+                        <td class="tg-im3k"><a href=#>view</a></td>
                     </tr>`)
         }
     }
