--- a/Views/Collection/Collection.cshtml
+++ b/Views/Collection/Collection.cshtml
@@ -1,13 +1,14 @@
 @{
     ViewData["Title"] = "Collection";
 }
-
+<header>
 <!--autogen header here-->
 
 <div class="text-center">
     <h1 class="display-4">Collection</h1>
     <p>Here is your collection:</p>
 </div>
+</header>
 <body>
 <!--autogen style, move this to css later-->
 
@@ -60,5 +61,5 @@
         }
     }
 </script>
-
+<!--this has to be removed in final, this is just to fill the space-->
 <!--autogen footer here-->
