Landing Controller, View and ViewModel added

--- a/Views/Webshop/showListingByListingId.cshtml
+++ b/Views/Webshop/showListingByListingId.cshtml
@@ -1,1 +1,4 @@
-<h1>COMING: LISTING DETAILS</h1>
+@*model link*@
+@*Header met master view*@
+<h1>WIP: LISTING DETAILS</h1>
+@*Footer met master view*@
