Added authentication to the mvc app

--- a/Views/Landing/showLandingPage.cshtml
+++ b/Views/Landing/showLandingPage.cshtml
@@ -2,4 +2,13 @@
 
 @*Header met master view*@
 <h1>WIP: LANDING PAGE</h1>
+
+@if(User.Identity.IsAuthenticated)
+{
+    <p>
+        Congrats, you have are authenticated!
+    </p> 
+}
+
+
 @*Footer met master view*@
