--- a/Views/Card/SingleCard.cshtml
+++ b/Views/Card/SingleCard.cshtml
@@ -1,37 +1,26 @@
-﻿@page
-@model mtg_app.Views.Card.SingleCard
-
-@{
-    Layout = null;
+﻿@{
+    Layout = "_Layout";
 }
 
-<!DOCTYPE html>
+@model mtg_app.Models.Card.SingleCard
 
-<html lang="">
-    <head>
-        <title></title>
-    </head>
-    <body>
+
+<header>
+    Card Name: @Model.Name
+</header>
+
+<body>
         <style>
             .wrapper{display: flex;}
             .img, .table{display: inline-block; margin-left: 10%;}
         </style>
-        <div class="wrapper">
-            <div class="img"><img src="https://static.cardmarket.com/img/a902516c03e7967269c01b8f5a13fbf4/items/1/SNC/611269.jpg" class="text-left"> <!--fetch image and have it here--></div>
-            <div class="table">
-                <dl class="text-right">
-                    <dt>Rarity</dt>
-                    <dd><span>xzy</span></dd>
-                    <dt>Number</dt>
-                    <dd>250</dd>
-                    <dt>Available items</dt>
-                    <dd>911</dd>
-                    <dt>From</dt>
-                    <dd>6,00 €</dd>
-                    <dt>Price Trend</dt>
-                    <dd><span>7,38 €</span></dd>
-                </dl>
-            </div>
+    <div class="wrapper">
+        <div class="img"><img src="@Model.ImageUrl" class="text-left"> <!--fetch image and have it here--></div>
+        <div class="table">
+            <dl class="text-right">
+                <dt>Type:</dt>
+                <dd>@Model.Type</dd>
+            </dl>
         </div>
-    </body>
-</html>
+    </div>
+</body>
