Display cards from pack to user WIP

--- a/Views/Card/SingleCard.cshtml
+++ b/Views/Card/SingleCard.cshtml
@@ -15,7 +15,7 @@
             .img, .table{display: inline-block; margin-left: 10%;}
         </style>
     <div class="wrapper">
-        <div class="img"><img src="@Model.ImageUrl" class="text-left"> <!--fetch image and have it here--></div>
+        <div class="img" ><img src="@Model.ImageUrl" class="text-left" />  </div>
         <div class="table">
             <dl class="text-right">
                 <dt>Type:</dt>
