Header en footer aangepast

--- a/Views/Landing/showLandingPage.cshtml
+++ b/Views/Landing/showLandingPage.cshtml
@@ -1,12 +1,12 @@
 @model mtg_app.Models.LandingViewModel
 
 @*Header met master view*@
-<h1>WIP: LANDING PAGE</h1>
+<h1>Welcome</h1>
 
 @if(User.Identity.IsAuthenticated)
 {
     <p>
-        Congrats, you have are authenticated!
+        Congrats, you are authenticated!
     </p> 
 }
 
