--- a/Views/Shared/_CollectionPartial.cshtml
+++ b/Views/Shared/_CollectionPartial.cshtml
@@ -4,18 +4,9 @@
 <tr class="text-center">
     <td><a asp-action="SingleCard" asp-route-cardId="@Model.CardId">@Model.Name</a></td>
     <td>@Model.Type</td>
-    
     <td>@Model.Variations</td>
-    
-    @{
-        if (@Model.InCollection)
-        {
-            <td>✅</td>
-        }
-        else
-        {
-            <td>⭕</td>
-        }
-    }
-    
+    <td>✅</td>
+
+    <!--extra td here for "on the market", see the Collection.cshtml page-->
+
 </tr>
