Display user coins balance & functions to receive daily & default coins

--- a/Views/Coin/Index.cshtml
+++ b/Views/Coin/Index.cshtml
@@ -30,6 +30,10 @@
         {
             <a asp-action="ReceiveDailyCoins">Receive Daily Coins! </a>
         }
+        else
+        {
+            <p>You have already colleted your Daily Coins!</p>
+        }
     }
 </div>
 </body>
