Changed names of some views & completed func to add packs to cart

--- a/Views/Webshop/Index.cshtml
+++ b/Views/Webshop/Index.cshtml
@@ -12,7 +12,7 @@
     - 1x <a asp-controller="Card" asp-action="Index">Basic Land</a> (TODO: filter op land cards)<br>
     - 3x <a asp-controller="Card" asp-action="Index">Uncommon</a>  (TODO: filter op uncommon)<br>
     - 10x <a asp-controller="Card" asp-action="Index">Common</a> (TODO: filter op common)<br><br>
-    <a asp-controller="Webshop" asp-action="buyBoosterPack">BUY BOOSTER PACK</a>
+    <a asp-controller="Webshop" asp-action="BuyBoosterPack">BUY BOOSTER PACK</a>
 </div>
 <br>
 <div>
