--- a/Views/Card/Index.cshtml
+++ b/Views/Card/Index.cshtml
@@ -13,6 +13,14 @@
 </header>
 
 <body>
+    @using(Html.BeginForm("findCard","CardController", FormMethod.Get))
+    {
+        @Html.TextBox("Year", "") //have a blank search field instead of having to delete the word "cards"
+        <div>
+            <input type="submit" value="Search" />
+        </div>
+    }
+    <!--add a search here to search inside the cards-->
     <div>
         <table class="table">
             <thead>
