--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -30,3 +30,32 @@ body {
   margin: 0 0.5rem 2rem 0.5rem;
   border-radius: 5px;
 }
+
+#shop_info {
+  display: flex;
+  justify-content: space-between;
+}
+
+#shop_info strong {
+  font-size: 1.3rem;
+  color: black;
+}
+
+#shop_info p {
+  font-size: 1.1rem;
+  color: #f00d4d;
+}
+
+#buying {
+  display: flex;
+  justify-content: space-between;
+}
+
+#buying_cart strong {
+  font-size: 1.2rem;
+}
+
+#buying_cart {
+  display: flex;
+  justify-content: space-between;
+}
