Extending the search functionality to the collection cshtml

--- a/Views/Collection/Collection.cshtml
+++ b/Views/Collection/Collection.cshtml
@@ -11,6 +11,13 @@
 </div>
 </header>
 <body>
+    <form 
+        asp-controller="SearchCard"
+        asp-action="SingleCard"
+        method="GET">
+        <input type="text" name="Name" value=""/>
+        <input type="submit">
+    </form>
     <div>
         <table class="table">
             <thead>
