--- a/Views/Card/Index.cshtml
+++ b/Views/Card/Index.cshtml
@@ -16,9 +16,62 @@
     <form 
         asp-controller="SearchCard"
         asp-action="SingleCard"
-        method="GET">
-        <input type="text" name="Name" value=""/>
-        <input type="submit">
+        method="GET"
+        id="search">
+        <input type="text" name="Name" value="" form="search"/>
+        <input type="submit" form="search" value="Search">
+    </form>
+<hr>
+    <form 
+        asp-controller="FilterCards"
+        asp-action="FilterCards"
+        method="GET"
+        id="filter">
+        <label for="rarity_code">Rarity:</label>
+        <select id="rarity_code" name="rarity_code" form="filter">
+            <option value=""></option>
+            <option value="U">U</option>
+            <option value="C">C</option>
+            <option value="R">R</option>
+            <option value="L">L</option>
+            <option value="M">M</option>
+            <option value="MR">MR</option>
+            <!--have this dynamically filled in, just to test right now-->
+        </select>
+        <label for="converted_mana_cost">Mana cost:</label>
+        <select id="converted_mana_cost" name="converted_mana_cost" form="filter">
+            <option value=""></option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+            <!--have this dynamically filled in, just to test right now-->
+        </select>
+        <label for="power">Power:</label>
+        <select id="power" name="power" form="filter">
+            <option value=""></option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+            <!--have this dynamically filled in, just to test right now-->
+        </select>
+        <label for="thoughness">Thoughness:</label>
+        <select id="thoughness" name="thoughness" form="filter">
+            <option value=""></option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+            <!--have this dynamically filled in, just to test right now-->
+        </select>
+        <input type="submit" form="filter" value="Filter">
     </form>
     <div>
         <table class="table">
