--- a/Views/Card/Index.cshtml
+++ b/Views/Card/Index.cshtml
@@ -29,7 +29,7 @@
         id="filter">
         <label for="rarity_code">Rarity:</label>
         <select id="rarity_code" name="rarity_code" form="filter">
-            <option value=""></option>
+            <option value=null></option>
             <option value="U">U</option>
             <option value="C">C</option>
             <option value="R">R</option>
@@ -40,7 +40,7 @@
         </select>
         <label for="converted_mana_cost">Mana cost:</label>
         <select id="converted_mana_cost" name="converted_mana_cost" form="filter">
-            <option value=""></option>
+            <option value=null></option>
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
@@ -51,7 +51,7 @@
         </select>
         <label for="power">Power:</label>
         <select id="power" name="power" form="filter">
-            <option value=""></option>
+            <option value=null></option>
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
@@ -62,7 +62,7 @@
         </select>
         <label for="thoughness">Thoughness:</label>
         <select id="thoughness" name="thoughness" form="filter">
-            <option value=""></option>
+            <option value=null></option>
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
