--- a/Views/Collection/Collection.cshtml
+++ b/Views/Collection/Collection.cshtml
@@ -18,6 +18,46 @@
         <input type="text" name="Name" value=""/>
         <input type="submit">
     </form>
+    <hr>
+    <form 
+        asp-controller="FilterCards"
+        asp-action="FilterCards"
+        method="GET"
+        id="filter">
+        <label for="rarity_code">Rarity:</label>
+        <select id="rarity_code" name="rarity_code" form="filter">
+            <option value=null></option>
+            @foreach (var rarityLevels in Model.Rarity)
+            {
+                <option value=@rarityLevels>@rarityLevels</option>
+            }
+        </select>
+        <label for="converted_mana_cost">Mana cost:</label>
+        <select id="converted_mana_cost" name="converted_mana_cost" form="filter">
+            <option value=null></option>
+            @foreach (var manaCostLevels in Model.ManaCost)
+            {
+                <option value=@manaCostLevels>@manaCostLevels</option>
+            }
+        </select>
+        <label for="power">Power:</label>
+        <select id="power" name="power" form="filter">
+            <option value=null></option>
+            @foreach (var powerLevels in Model.Power)
+            {
+                <option value=@powerLevels>@powerLevels</option>
+            }
+        </select>
+        <label for="thoughness">Thoughness:</label>
+        <select id="thoughness" name="thoughness" form="filter">
+            <option value=null></option>
+            @foreach (var thoughnessLevels in Model.Thoughness)
+            {
+                <option value=@thoughnessLevels>@thoughnessLevels</option>
+            }
+        </select>
+        <input type="submit" form="filter" value="Filter">
+    </form>
     <div>
         <table class="table">
             <thead>
