--- a/Views/FilterCards/FilterCards.cshtml
+++ b/Views/FilterCards/FilterCards.cshtml
@@ -25,7 +25,7 @@
             </thead>
             <tbody>
                 @foreach (var card in Model.Cards) {
-                    Html.RenderPartial("_FilterCardsPartial", card);
+                    Html.RenderPartial("_CardsPartial", card);
                 }
             </tbody>
         </table>
