--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -59,3 +59,5 @@ body {
   display: flex;
   justify-content: space-between;
 }
+
+.container{display:flex;  justify-content: center;  align-items: center; } .c1,.c2{display: block; margin: 0 1rem 0 1rem;}
