--- a/Views/FilterCards/FilterCards.cshtml
+++ b/Views/FilterCards/FilterCards.cshtml
@@ -13,6 +13,7 @@
 </header>
 
 <body>
+    @{Html.RenderPartial("_FilterPartial");}    
     <div>
         <table class="table">
             <thead>
