--- a/Views/Collection/OpenPack.cshtml
+++ b/Views/Collection/OpenPack.cshtml
@@ -4,7 +4,6 @@
 @model mtg_app.Models.Collection.OpenPacks.OpenPacksViewModel;
 
 <header>
-    <!--autogen header here-->
 
     <div class="text-center">
         <h1 class="display-4">Open Pack</h1>
@@ -62,7 +61,7 @@
 </table>
 
 <div>
-    <a asp-action="Collection" class="btn btn-primary" >Go to Collection</a>
+    <a asp-action="Index" class="btn btn-primary" >Go to Collection</a>
 </div>
 
 </body>
