--- a/Views/Shared/_FilterPartial.cshtml
+++ b/Views/Shared/_FilterPartial.cshtml
@@ -1,23 +1,10 @@
-@{
-    ViewData["Title"] = "Cards";
-}
-
 @model mtg_app.Models.Card.CardsViewModel;
 
-<header>
-    
-    <div class="text-center">
-        <h1 class="display-4">All Cards</h1>
-    </div>
-    
-</header>
-
-<body>
-    <div class="container">
+<div class="container">
         <div class="c1">
             <form 
                 asp-controller="SearchCard"
-                asp-action="SingleCard"
+                asp-action="SearchCard"
                 method="GET"
                 id="search">
                 <input type="text" name="Name" value="" form="search"/>
@@ -66,21 +53,3 @@
                 </form>
             </div>
     </div>
-    <div>
-        <table class="table">
-            <thead>
-                <tr class="text-center">
-                    <th>@Model.ColumnCardName</th>
-                    <th>@Model.ColumnCardType</th>
-                    <th>@Model.ColumnCardVariations</th>
-                    <th>@Model.ColumnCardInCollection</th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var card in Model.Cards) {
-                    Html.RenderPartial("_CardsPartial", card);
-                }
-            </tbody>
-        </table>
-    </div>
-</body>
