Finetune controllers to services changes & routing & imports clean up

--- a/Views/SearchCard/SearchCard.cshtml
+++ b/Views/SearchCard/SearchCard.cshtml
@@ -17,7 +17,7 @@
         <div class="c1">
             <form 
                 asp-controller="SearchCard"
-                asp-action="SingleCard"
+                asp-action="SearchCard"
                 method="GET"
                 id="search">
                 <input type="text" name="Name" value="" form="search"/>
