--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -32,9 +32,14 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Collection" asp-action="Index">Collection</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Index">Account</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Collection" asp-action="Packs">Packs</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Coin" asp-action="Index">Coins</a>
                         </li>
                         
+                        
+
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
