Collection gets displayed. TODO: clean the code

--- a/Views/Collection/Index.cshtml
+++ b/Views/Collection/Index.cshtml
@@ -1,9 +1,8 @@
 @{
     ViewData["Title"] = "Collection";
 }
-@model mtg_app.Models.Collection.CollectionViewModel; //This model should be changed to that of the userthemselves, and not the general model
+@model mtg_app.Models.Collection.CollectionViewModel;
 <header>
-<!--autogen header here-->
 
 <div class="text-center">
     <h1 class="display-4">Collection</h1>
