--- a/Views/Collection/SearchCollectionCard.cshtml
+++ b/Views/Collection/SearchCollectionCard.cshtml
@@ -5,8 +5,8 @@
 <header>
 
 <div class="text-center">
-    <h1 class="display-4">Collection</h1>
-    <p>Here is your collection:</p>
+    <h1 class="display-4">Search collection</h1>
+    <p>Here is your searchresult in your collection:</p>
 </div>
 </header>
 <body>
