--- a/Views/Shared/_FilterCollectionPartial.cshtml
+++ b/Views/Shared/_FilterCollectionPartial.cshtml
@@ -13,8 +13,8 @@
         </div>
             <div class="c2">
                 <form 
-                    asp-controller="FilterCards"
-                    asp-action="FilterCards"
+                    asp-controller="Collection"
+                    asp-action="FilterCollectionCard"
                     method="GET"
                     id="filter">
                     <label for="rarity_code">Rarity:</label>
